// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should have button styles 1`] = `
.circuit-0 {
  background-color: #3388FF;
  border-color: #2567D8;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #FFFFFF;
  cursor: default;
  font-weight: 700;
  width: auto;
  height: auto;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0:active {
  background-color: #2567D8;
  border-color: #1641AC;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #2567D8;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-0:hover {
  background-color: #2567D8;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #1641AC;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
}

<button
  className="circuit-0 circuit-1"
  disabled={false}
  href={undefined}
  onClick={undefined}
  size="mega"
  target={undefined}
>
  Button
</button>
`;

exports[`Button should have disabled button styles 1`] = `
.circuit-0 {
  background-color: #3388FF;
  border-color: #2567D8;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #FFFFFF;
  cursor: default;
  font-weight: 700;
  width: auto;
  height: auto;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0:active {
  background-color: #2567D8;
  border-color: #1641AC;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #2567D8;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-0:hover {
  background-color: #2567D8;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #1641AC;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
}

<button
  className="circuit-0 circuit-1"
  disabled={true}
  href={undefined}
  onClick={undefined}
  size="mega"
  target={undefined}
>
  Disabled button
</button>
`;

exports[`Button should have flat button styles 1`] = `
.circuit-0 {
  background-color: #3388FF;
  border-color: #2567D8;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #FFFFFF;
  cursor: default;
  font-weight: 700;
  width: auto;
  height: auto;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
  border-width: 0px;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.02),0 2px 2px 0 rgba(12,15,20,0.06),0 4px 4px 0 rgba(12,15,20,0.06);
}

.circuit-0:active {
  background-color: #2567D8;
  border-color: #1641AC;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #2567D8;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-0:hover {
  background-color: #2567D8;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #1641AC;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
}

.circuit-0:active {
  background-color: #1641AC;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.02),0 0 1px 0 rgba(12,15,20,0.06),0 2px 2px 0 rgba(12,15,20,0.06);
}

.circuit-0:active:focus,
.circuit-0:hover:focus {
  border-width: 0;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0:focus {
  border-width: 2px;
  padding: calc(8px - 2px) calc(24px - 2px);
}

<button
  className="circuit-0 circuit-1"
  disabled={false}
  href={undefined}
  onClick={undefined}
  size="mega"
  target={undefined}
>
  Flat button
</button>
`;

exports[`Button should have flat disabled button styles 1`] = `
.circuit-0 {
  background-color: #3388FF;
  border-color: #2567D8;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #FFFFFF;
  cursor: default;
  font-weight: 700;
  width: auto;
  height: auto;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
  border-width: 0px;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.02),0 2px 2px 0 rgba(12,15,20,0.06),0 4px 4px 0 rgba(12,15,20,0.06);
}

.circuit-0:active {
  background-color: #2567D8;
  border-color: #1641AC;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #2567D8;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-0:hover {
  background-color: #2567D8;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #1641AC;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
}

.circuit-0:active {
  background-color: #1641AC;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.02),0 0 1px 0 rgba(12,15,20,0.06),0 2px 2px 0 rgba(12,15,20,0.06);
}

.circuit-0:active:focus,
.circuit-0:hover:focus {
  border-width: 0;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0:focus {
  border-width: 2px;
  padding: calc(8px - 2px) calc(24px - 2px);
}

<button
  className="circuit-0 circuit-1"
  disabled={true}
  href={undefined}
  onClick={undefined}
  size="mega"
  target={undefined}
>
  Flat button
</button>
`;

exports[`Button should have giga button styles 1`] = `
.circuit-0 {
  background-color: #3388FF;
  border-color: #2567D8;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #FFFFFF;
  cursor: default;
  font-weight: 700;
  width: auto;
  height: auto;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(12px - 0px) calc(32px - 0px);
}

.circuit-0:active {
  background-color: #2567D8;
  border-color: #1641AC;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #2567D8;
  border-width: 2px;
  outline: 0;
  padding: calc(12px - 1px) calc(32px - 1px);
}

.circuit-0:hover {
  background-color: #2567D8;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #1641AC;
  border-width: 1px;
  padding: calc(12px - 0px) calc(32px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
}

<button
  className="circuit-0 circuit-1"
  disabled={false}
  href={undefined}
  onClick={undefined}
  size="giga"
  target={undefined}
>
  Button
</button>
`;

exports[`Button should have kilo button styles 1`] = `
.circuit-0 {
  background-color: #3388FF;
  border-color: #2567D8;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #FFFFFF;
  cursor: default;
  font-weight: 700;
  width: auto;
  height: auto;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(4px - 0px) calc(16px - 0px);
}

.circuit-0:active {
  background-color: #2567D8;
  border-color: #1641AC;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #2567D8;
  border-width: 2px;
  outline: 0;
  padding: calc(4px - 1px) calc(16px - 1px);
}

.circuit-0:hover {
  background-color: #2567D8;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #1641AC;
  border-width: 1px;
  padding: calc(4px - 0px) calc(16px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
}

<button
  className="circuit-0 circuit-1"
  disabled={false}
  href={undefined}
  onClick={undefined}
  size="kilo"
  target={undefined}
>
  Button
</button>
`;

exports[`Button should have mega button styles 1`] = `
.circuit-0 {
  background-color: #3388FF;
  border-color: #2567D8;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #FFFFFF;
  cursor: default;
  font-weight: 700;
  width: auto;
  height: auto;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0:active {
  background-color: #2567D8;
  border-color: #1641AC;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #2567D8;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-0:hover {
  background-color: #2567D8;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #1641AC;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
}

<button
  className="circuit-0 circuit-1"
  disabled={false}
  href={undefined}
  onClick={undefined}
  size="mega"
  target={undefined}
>
  Button
</button>
`;

exports[`Button should have secondary button styles 1`] = `
.circuit-0 {
  background-color: #3388FF;
  border-color: #2567D8;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #FFFFFF;
  cursor: default;
  font-weight: 700;
  width: auto;
  height: auto;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
  background-color: transparent;
  border-color: #212933;
  border-width: 0;
  box-shadow: none;
  color: #5C656F;
}

.circuit-0:active {
  background-color: #2567D8;
  border-color: #1641AC;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #2567D8;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-0:hover {
  background-color: #2567D8;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #1641AC;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
}

.circuit-0:active {
  background-color: transparent;
  border-color: #212933;
  border-width: 0;
  box-shadow: none;
}

.circuit-0:focus {
  border-color: #212933;
  border-width: 2px;
  box-shadow: none;
  padding: calc(8px - 2px) calc(24px - 2px);
}

.circuit-0:hover {
  background-color: transparent;
  border-width: 0;
  border-color: #212933;
}

.circuit-0:active,
.circuit-0:hover,
.circuit-0:hover:focus,
.circuit-0:active:focus {
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0:active,
.circuit-0:hover,
.circuit-0:focus {
  color: #212933;
}

.circuit-0:active:focus,
.circuit-0:hover:focus {
  border-color: #212933;
  border-width: 2px;
  box-shadow: none;
  padding: calc(8px - 2px) calc(24px - 2px);
}

<button
  className="circuit-0 circuit-1"
  disabled={false}
  href={undefined}
  onClick={undefined}
  secondary={true}
  size="mega"
  target={undefined}
>
  Secondary button
</button>
`;

exports[`Button should have secondary disabled button styles 1`] = `
.circuit-0 {
  background-color: #3388FF;
  border-color: #2567D8;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #FFFFFF;
  cursor: default;
  font-weight: 700;
  width: auto;
  height: auto;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
  background-color: transparent;
  border-color: #212933;
  border-width: 0;
  box-shadow: none;
  color: #5C656F;
}

.circuit-0:active {
  background-color: #2567D8;
  border-color: #1641AC;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #2567D8;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-0:hover {
  background-color: #2567D8;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #1641AC;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
}

.circuit-0:active {
  background-color: transparent;
  border-color: #212933;
  border-width: 0;
  box-shadow: none;
}

.circuit-0:focus {
  border-color: #212933;
  border-width: 2px;
  box-shadow: none;
  padding: calc(8px - 2px) calc(24px - 2px);
}

.circuit-0:hover {
  background-color: transparent;
  border-width: 0;
  border-color: #212933;
}

.circuit-0:active,
.circuit-0:hover,
.circuit-0:hover:focus,
.circuit-0:active:focus {
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0:active,
.circuit-0:hover,
.circuit-0:focus {
  color: #212933;
}

.circuit-0:active:focus,
.circuit-0:hover:focus {
  border-color: #212933;
  border-width: 2px;
  box-shadow: none;
  padding: calc(8px - 2px) calc(24px - 2px);
}

<button
  className="circuit-0 circuit-1"
  disabled={true}
  href={undefined}
  onClick={undefined}
  secondary={true}
  size="mega"
  target={undefined}
>
  Secondary disabled button
</button>
`;

exports[`Button should have secondary flat button styles 1`] = `
.circuit-0 {
  background-color: #3388FF;
  border-color: #2567D8;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #FFFFFF;
  cursor: default;
  font-weight: 700;
  width: auto;
  height: auto;
  text-decoration: none;
  font-size: 15px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
  background-color: transparent;
  border-color: #212933;
  border-width: 0;
  box-shadow: none;
  color: #5C656F;
}

.circuit-0:active {
  background-color: #2567D8;
  border-color: #1641AC;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-0:focus {
  border-color: #2567D8;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-0:hover {
  background-color: #2567D8;
}

.circuit-0:hover,
.circuit-0:active {
  border-color: #1641AC;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0[disabled],
.circuit-0:disabled {
  opacity: 0.4;
  pointer-events: none;
}

.circuit-0:active {
  background-color: transparent;
  border-color: #212933;
  border-width: 0;
  box-shadow: none;
}

.circuit-0:focus {
  border-color: #212933;
  border-width: 2px;
  box-shadow: none;
  padding: calc(8px - 2px) calc(24px - 2px);
}

.circuit-0:hover {
  background-color: transparent;
  border-width: 0;
  border-color: #212933;
}

.circuit-0:active,
.circuit-0:hover,
.circuit-0:hover:focus,
.circuit-0:active:focus {
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-0:active,
.circuit-0:hover,
.circuit-0:focus {
  color: #212933;
}

.circuit-0:active:focus,
.circuit-0:hover:focus {
  border-color: #212933;
  border-width: 2px;
  box-shadow: none;
  padding: calc(8px - 2px) calc(24px - 2px);
}

<button
  className="circuit-0 circuit-1"
  disabled={false}
  href={undefined}
  onClick={undefined}
  secondary={true}
  size="mega"
  target={undefined}
>
  Secondary flat button
</button>
`;
